--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,8 @@ xsize = 400
 ysize = 400
 font  = MSゴシック
 size  = 20
-color = black
+str_color = 255, 229, 189
+bg_color  = 255,  90, 100
 
 [ObjectWindow]
 title   = 操作ウインドウ
@@ -15,6 +16,6 @@ xsize   = 600
 ysize   = 300
 font    = MS明朝
 size    = 20
-color   = black
-bgcolor = pink
+str_color = 0, 0, 0
+bg_color  = 255,  90, 100
 button_size_x = 20
